# cpp_maths

./: .gitignore  CMakeLists.txt  Frac.cpp  Frac.hpp  Int.cpp  Int.hpp  Mat.hpp  README.md  Vec.cpp  Vec.hpp  common.cpp  common.hpp  int_demo.cpp  int_test.cpp  makefile  mat_demo.cpp  matrix.cpp  matrix.hpp  matrix_test.cpp  numbers.cpp  numbers.hpp
demo/: frac_demo.cpp  int_demo.cpp  mat_demo.cpp  vec_demo.cpp
src/: Frac.cpp  Frac.hpp  Int.cpp  Int.hpp  Mat.hpp  Poly.hpp  Vec.hpp  common.cpp  common.hpp
test/: frac_test.cpp  frac_test.hpp  int_test.cpp  int_test.hpp  mat_test.cpp  mat_test.hpp  poly_test.hpp  test_main.cpp  vec_test.cpp  vec_test.hpp
util/: genAdditionTestCases.py  genDivideTestCases.py  genExponentiationTestCases.py  genModulusTestCases.py  genMultiplyTestCases.py  genQuotientRemainderTestCases.py  genSubtractTestCases.py
